--- a/imc.html
+++ b/imc.html
@@ -26,7 +26,7 @@
 
 
 <figure>
-    <img src="imagens\jogging.png">
+    <img src="jogging.png">
     <figcaption>
         <h2>Correr é importante para saúde</h2>
     </figcaption>
