--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 </head>
 <body>
     <H1>Feliz dia das mães</H1>
-    <h2>Te amamos muito e queremos que você continue sendo essa mãe maravilhosa que cuida de todos e sempre 
-    nos orgulha muito. Curta esse dia que Deus preparou com tanto carinho pra você, ele te escolheu a dedo
-    para cuidar de todos nós. Te amamos MAMÃE.
+    <h2>Parabéns pelo dia mais que especial na sua vida, aquele dia que você tanto sonhou, o dia que você mais pediu a Deus, o dia que deixou você mais próxima Dele e escolhendo você a dedo para ser essa mãe tão protetora, linda e que  seus filhos tanto amam. O amor que eles tem por você é incondicional, todo momento de ficar perto de você não é a toa, esse desejo é porque você dá amor e segurança para eles. Nunca se esqueça que você é a melhor mãe do mundo e melhor esposa. Te amamos e seremos eternamente gratos por este imenso amor.   
     </h2>
+    <h2>Armando, Alice, Sofia e Henrique.</h2>
 
     <img src="imagem001.jpg">
     <img src="imagem002.jpg">
