--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <img src="imagem003.jpg">
     <img src="imagem004.jpg">
     <img src="imagem005.jpg">
+    <img src="imagem008.jpg">
 
     <h1>Clique no seu presente</h1>
 
